--- a/public/css/p3.css
+++ b/public/css/p3.css
@@ -79,6 +79,13 @@
 	margin-left: 48px;
 	margin-bottom: 20px;
 }
+.image-cropper {
+		margin: auto;
+    width: 200px;
+    overflow: hidden;
+    border-radius: 8%;
+		box-shadow: 0 0 0.25em #000;
+}
 .UserBG {
 		box-shadow: 0 0 0.625em #000;
     position: relative;
@@ -111,4 +118,27 @@
 }
 #error {
 	list-style-type: none;
+}
+.json-box {
+	display: none;
+	border: 1px solid #888;
+	border-radius: 5px;
+	background-color: #eee;
+	text-align: left;
+	margin: auto;
+	padding:15px;
+	margin-top: 25px;
+	word-wrap: break-word;
+	overflow: auto;
+}
+.bar {
+	color: #999;
+	font-size: 1.7em;
+	text-shadow: 1px 1px #000;
+	border: 1px solid #888;
+	margin: auto;
+	padding: auto;
+	height: 400px;
+	width: 158px;
+	float: left;
 }
