--- a/public/css/p3.css
+++ b/public/css/p3.css
@@ -79,22 +79,28 @@
 	margin-left: 48px;
 	margin-bottom: 20px;
 }
-.image-cropper {
-		margin: auto;
-    width: 200px;
-    overflow: hidden;
-    border-radius: 8%;
-		box-shadow: 0 0 0.25em #000;
-}
 .UserBG {
 		box-shadow: 0 0 0.625em #000;
     position: relative;
+		overflow: hidden;
     /*height: 180px;*/
     width: 75%;
 		background-color: #ccc;
     margin: auto;
     border-radius: 15px 15px 15px 15px;
 		padding: 12px;
+}
+.image-cropper {
+		margin: auto;
+		margin-right: 10px;
+    overflow: hidden;
+		float: left;
+    border-radius: 8%;
+		box-shadow: 0 0 0.25em #000;
+}
+#user-pic{
+		width: 200px;
+		height: 200px;
 }
 .links {
 		font-family: 'Inconsolata', monospace;
@@ -131,6 +137,7 @@
 	word-wrap: break-word;
 	overflow: auto;
 }
+
 .bar {
 	color: #999;
 	font-size: 1.7em;
