optimize lorem ipsum and user controllers, clean up and commenting

--- a/public/css/p3.css
+++ b/public/css/p3.css
@@ -137,7 +137,10 @@
 	word-wrap: break-word;
 	overflow: auto;
 }
-
+#json {
+	margin-top: -5px;
+	margin-bottom: -20px;
+}
 .bar {
 	color: #999;
 	font-size: 1.7em;
