--- a/public/css/p3.css
+++ b/public/css/p3.css
@@ -83,7 +83,6 @@
 		box-shadow: 0 0 0.625em #000;
     position: relative;
 		overflow: hidden;
-    /*height: 180px;*/
     width: 75%;
 		background-color: #ccc;
     margin: auto;
@@ -91,12 +90,14 @@
 		padding: 12px;
 }
 .image-cropper {
-		margin: auto;
-		margin-right: 10px;
+		/*margin: auto;*/
+		margin-right: 15px;
     overflow: hidden;
 		float: left;
-    border-radius: 8%;
+    border-radius: 5%;
 		box-shadow: 0 0 0.25em #000;
+		padding-top: 10px;
+		padding-bottom: 5px;
 }
 #user-pic{
 		width: 200px;
@@ -140,6 +141,12 @@
 #json {
 	margin-top: -5px;
 	margin-bottom: -20px;
+}
+#tbump {
+	margin-top: -12px;
+}
+#bbump {
+	margin-bottom: -12px;
 }
 .bar {
 	color: #999;
